# aoc_2025

./: .gitignore  Cargo.toml
src/day1/: day1.rs
src/day10/: day10.rs
src/day2/: day2.rs
src/day3/: day3.rs
src/day4/: day4.rs
src/day5/: day5.rs
src/day6/: day6.rs  input2.txt
src/day7/: day7.rs
src/day8/: day8.rs
src/day9/: day9.rs
