[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "day1"
path = "./src/day1/day1.rs"

[[bin]]
name = "day2"
path = "./src/day2/day2.rs"

[[bin]]
name = "day3"
path = "./src/day3/day3.rs"

[[bin]]
name = "day4"
path = "./src/day4/day4.rs"

[[bin]]
name = "day5"
path = "./src/day5/day5.rs"

[[bin]]
name = "day6"
path = "./src/day6/day6.rs"

[[bin]]
name = "day7"
path = "./src/day7/day7.rs"

[[bin]]
name = "day8"
path = "./src/day8/day8.rs"

[[bin]]
name = "day9"
path = "./src/day9/day9.rs"

[dependencies]
itertools = "0.14.0"
